--- a/dev.html
+++ b/dev.html
@@ -251,7 +251,15 @@
           </a>
         </li>
       </ul>
-
+      <p>
+        Powered by
+        <a
+          href="https://aidomainking.com"
+          target="_blank"
+          aria-label="AI Domain King"
+          >AI Domain King</a
+        >.
+      </p>
       <p>&copy; 2024 aftermarketaidomains.com. All rights reserved.</p>
     </footer>
 
